# test-template

./: .travis.yml  Cargo.toml  LICENSE-APACHE  README.md  README.tpl  shell.nix
.ci/: build.sh  run.sh  setup-ubuntu.sh  setup.sh
.github/: dependabot.yml
.github/workflows/: rust.yml  sh.yml
src/: main.rs
