[package]
name = "test-template"
version = "0.1.0"
authors = ["Jose Carlos Venegas Munoz <jose.carlos.venegas.munoz@intel.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
